tests/golden/fixtures/syntax-symbolic-subscripts-err-nonconstant-base/expected.err
Error: var initializer 'base_addr' must be a constant numeric expression
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-nonconstant-base/input.k65:3:5 ]
   │
 3 │ ] = base_addr
   │     ────┬────  
   │         ╰────── here
───╯
